# Tic-Tac-Toe

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
libTicTacToe/: CMakeLists.txt
libTicTacToe/include/: Board.h  Game.h  Player.h
libTicTacToe/src/: Board.cpp  Game.cpp  Player.cpp
libTicTacToe/src/board/: BoardIterator.cpp  BoardIterator.h
scripts/: build.sh  compiler.sh  travis.sh
test/: CMakeLists.txt  CMakeLists.txt.in  gameUnitTest.cpp  main.cpp  playerUnitTest.cpp
test/include/: boardUnitTest.h
test/src/: boardUnitTest.cpp  gameUnitTest.cpp  playerUnitTest.cpp
third_parties/: Dockerfile
third_parties/SFML/: Dockerfile
